      (PC 101: If you can't satisfy everyone, satisfy no-one.)
    - Move countrychooser back to the root floppy.
    - Add wireless-tools-udeb and nic-usb-modules to the root floppy because
      we have the space, so why not?
    - Update hppa to 2.4.27 kernel. Without testing it, but the 2.4.25 kernel
      udebs are no longer available. We need hppa developers..
  * dann frazier
    - Add ia64 elilo .msg files from Jim Lieb
    - Add ia64 2.6 image build goo, contributed by Jim Lieb
      Closes: #267689
    - Move ia64 2.6 flavor to 2.6.8-1
    - Move ia64 2.4 flavor to 2.4.27-1
    - Make 2.6 the default for ia64
    - Add elilo.conf options for faster serial consoles
    - Add a hint about text mode to the elilo boot params screen
  * Bastian Blank
    - Drop the whole bunch of languages on s390.
  * Stephen R. Marenka
    - Modify m68k/atari bootargs to default to
      debian-installer/framebuffer=false.
    - Update m68k manual.
    - Add bootfloppy.cfg for all vme.
    - Enable vme builds.
    - m68k image reorganization.
    - Add some m68k/q40 support.
    - Update all m68k 2.4 kernels to 2.4.27.
    - Add preseed to nativehd/m68k.
  * Martin Michlmayr
    - Improve manifest descriptions of the Broadcom BCM1250 (SWARM)
      evaluation board.
    - Put a SiByl TFTP boot configuration script to sb1-swarm-bn/netboot.
    - Put the SiByl boot loader to sb1-swarm-bn/netboot.
    - Update the Cobalt manifest descriptions to reflect reality
      (the config now uses NFS, not TFTP).
    - Create an nfsroot tar file for Cobalt which can easily be extracted
      (containing all files including proper symlinks).
    - Put sibyl-installer on the sb1-swarm-bn/netboot initrd as a workaround
      to change debian-installer/kernel/linux/link_in_boot.
    - Switch mips and mipsel over to 2.4.27.
    - Put USB and input modules on the sb1-swarm-bn/netboot initrd to allow
      "desktop like" installations with framebuffer and USB keyboards.