@@ -1,10 +1,9 @@
 Things we really should fix before rc2:
 
-	- finish 2.6.8 and 2.4.27 kernel upgrades, all applicable arches
 	- fix red screen problem
-	- finish hppa kernel updates
 	- localization-config (needs to get debs to testing)
 	- udebs and debs and udeb source must be synced in sarge
+	- discover1 /media/cdrom mount point hosing bugs (#255103 et al)
 
 Things that would be nice for rc2, but can't block it:
 
